--- a/Techtonica Mod Loader/MainWindow.xaml
+++ b/Techtonica Mod Loader/MainWindow.xaml
@@ -4,16 +4,20 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Techtonica_Mod_Loader"
+        xmlns:Controls="clr-namespace:Techtonica_Mod_Loader.Controls"
         xmlns:Wpf="clr-namespace:Microsoft.Web.WebView2.Wpf;assembly=Microsoft.Web.WebView2.Wpf" x:Class="Techtonica_Mod_Loader.MainWindow"
         mc:Ignorable="d"
-        Title="Techtonica Mod Loader" Height="450" Width="800">
+        Title="Techtonica Mod Loader" Height="450" Width="800"
+        Background="{DynamicResource darkBackgroundBrush}">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="57*"/>
             <ColumnDefinition Width="743*"/>
         </Grid.ColumnDefinitions>
 
-        <Wpf:WebView2 Grid.ColumnSpan="2" Height="100" Width="100"/>
+        
+
+        <Wpf:WebView2 Grid.ColumnSpan="2" Height="100" Width="100" Visibility="Hidden"/>
         <Canvas x:Name="Canvas_Launch_Options" HorizontalAlignment="Left" Height="150" VerticalAlignment="Top" Width="150" Grid.ColumnSpan="2" RenderTransformOrigin="0.01,0.013">
             <Button x:Name="Check_for_updates_" Content="Check for updates!" Width="150" Height="20" HorizontalAlignment="Left" VerticalAlignment="Top" Click="Button_Check_For_Updates_Click"/>
 
