Designed MainWindow layout and added requirements for functional GUI

--- a/Techtonica Mod Loader/Controls/TButton.xaml
+++ b/Techtonica Mod Loader/Controls/TButton.xaml
@@ -7,12 +7,12 @@
              mc:Ignorable="d" 
              d:DesignHeight="40" d:DesignWidth="200">
     <Grid>
-        <Border CornerRadius="5"
+        <Border BorderBrush="{DynamicResource yellowBrush}" BorderThickness="1"
                 MouseLeftButtonUp="mouseLeftButtonUp"
                 MouseRightButtonUp="mouseRightButtonUp">
             <Border.Style>
                 <Style TargetType="Border">
-                    <Setter Property="Background" Value="{DynamicResource orangeBrightestBrush}"/>
+                    <Setter Property="Background" Value="{DynamicResource lightestBackgroundBrush}"/>
                     <Style.Triggers>
                         <DataTrigger Binding="{Binding ElementName=thisControl, Path=IsMouseOver, UpdateSourceTrigger=PropertyChanged}" Value="True">
                             <Setter Property="Background" Value="{DynamicResource yellowBrush}"/>
@@ -23,8 +23,18 @@
         </Border>
         <TextBlock Text="{Binding ElementName=thisControl, Path=ButtonText, UpdateSourceTrigger=PropertyChanged}" 
                    FontSize="{Binding ElementName=thisControl, Path=FontSize, UpdateSourceTrigger=PropertyChanged}"
-                   Foreground="{DynamicResource darkTextBrush}"
                    HorizontalAlignment="Center" VerticalAlignment="Center"
-                   IsHitTestVisible="False"/>
+                   IsHitTestVisible="False">
+            <TextBlock.Style>
+                <Style TargetType="TextBlock">
+                    <Setter Property="Foreground" Value="White"/>
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding ElementName=thisControl, Path=IsMouseOver, UpdateSourceTrigger=PropertyChanged}" Value="True">
+                            <Setter Property="Foreground" Value="{DynamicResource darkTextBrush}"/>
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </TextBlock.Style>
+        </TextBlock>
     </Grid>
 </UserControl>
