--- a/Techtonica Mod Loader/MainWindow.xaml
+++ b/Techtonica Mod Loader/MainWindow.xaml
@@ -7,7 +7,7 @@
         xmlns:Controls="clr-namespace:Techtonica_Mod_Loader.Controls"
         xmlns:Wpf="clr-namespace:Microsoft.Web.WebView2.Wpf;assembly=Microsoft.Web.WebView2.Wpf" x:Class="Techtonica_Mod_Loader.MainWindow"
         mc:Ignorable="d"
-        Title="Techtonica Mod Loader" Height="450" Width="800"
+        Title="Techtonica Mod Loader" Height="450" Width="800" WindowStartupLocation="CenterScreen"
         Loaded="OnProgramLoaded" Closing="OnProgramClosing">
     <Window.Background>
         <ImageBrush ImageSource="Background.jpg"/>
@@ -99,6 +99,9 @@
                 <Button x:Name="Button_Launch_Vanilla" Content="Launch without mods" Height="25" Width="150" Background="#FFFF0808" Foreground="White" Canvas.Left="0" Canvas.Top="20" Click="Button_Launch_Vanilla_Click" HorizontalAlignment="Left" VerticalAlignment="Top"/>
             </Canvas>
         </Grid>
+
+        <!--Shader-->
+        <Rectangle x:Name="shader" Fill="Black" Opacity="0.7" Grid.RowSpan="2" Visibility="Hidden"/>
 
     </Grid>
 </Window>
