--- a/Techtonica Mod Loader/Panels/InstalledModPanel.xaml
+++ b/Techtonica Mod Loader/Panels/InstalledModPanel.xaml
@@ -8,7 +8,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="50" d:DesignWidth="800">
     <Border Background="{DynamicResource lightBackgroundBrush}" CornerRadius="5">
-        <Grid Margin="2">
+        <Grid x:Name="mainGrid" Margin="2">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="{Binding ElementName=thisControl, Path=ActualHeight, UpdateSourceTrigger=PropertyChanged}"/>
                 <ColumnDefinition Width="{Binding ElementName=thisControl, Path=ActualHeight, UpdateSourceTrigger=PropertyChanged}"/>
@@ -30,7 +30,7 @@
                 <Run Text=" - "/>
                 <Run x:Name="modTaglineLabel" Text="Tagline"/>
             </TextBlock>
-            <TControls:TButton ButtonText="Configure" Grid.Column="3" Margin="2" Height="30"
+            <TControls:TButton x:Name="configureButton" ButtonText="Configure" Grid.Column="3" Margin="2" Height="30"
                                LeftClicked="OnConfigureClicked"/>
             <TControls:TButton ButtonText="View Mod Page" Grid.Column="4" Margin="2" Height="30"
                                LeftClicked="ViewModPageClicked"/>
