--- a/Techtonica Mod Loader/Panels/InstalledModPanel.xaml
+++ b/Techtonica Mod Loader/Panels/InstalledModPanel.xaml
@@ -14,7 +14,7 @@
                 <ColumnDefinition Width="{Binding ElementName=thisControl, Path=ActualHeight, UpdateSourceTrigger=PropertyChanged}"/>
                 <ColumnDefinition/>
                 <ColumnDefinition x:Name="configureColumn" Width="100"/>
-                <ColumnDefinition Width="100"/>
+                <ColumnDefinition x:Name="viewModPageColumn" Width="100"/>
                 <ColumnDefinition Width="100"/>
 
             </Grid.ColumnDefinitions>
@@ -32,7 +32,7 @@
             </TextBlock>
             <TControls:TButton x:Name="configureButton" ButtonText="Configure" Grid.Column="3" Margin="2" Height="30"
                                LeftClicked="OnConfigureClicked"/>
-            <TControls:TButton ButtonText="View Mod Page" Grid.Column="4" Margin="2" Height="30"
+            <TControls:TButton x:Name="viewModPageButton" ButtonText="View Mod Page" Grid.Column="4" Margin="2" Height="30"
                                LeftClicked="ViewModPageClicked"/>
             <TControls:TButton ButtonText="Delete" Grid.Column="5" Margin="2" Height="30"
                                RightClicked="DeleteModClicked"/>
