--- a/Techtonica Mod Loader/MainWindow.xaml
+++ b/Techtonica Mod Loader/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window
+﻿<Window x:Class="Techtonica_Mod_Loader.MainWindow" 
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,7 +6,6 @@
         xmlns:local="clr-namespace:Techtonica_Mod_Loader"
         xmlns:Controls="clr-namespace:Techtonica_Mod_Loader.Controls"
         xmlns:Panels="clr-namespace:Techtonica_Mod_Loader.Panels"
-        xmlns:Wpf="clr-namespace:Microsoft.Web.WebView2.Wpf;assembly=Microsoft.Web.WebView2.Wpf" x:Class="Techtonica_Mod_Loader.MainWindow"
         mc:Ignorable="d"
         Title="Techtonica Mod Loader" Height="675" Width="1200" WindowStartupLocation="CenterScreen"
         Loaded="OnProgramLoaded" Closing="OnProgramClosing">
