--- a/Techtonica Mod Loader/Panels/InstalledModPanel.xaml
+++ b/Techtonica Mod Loader/Panels/InstalledModPanel.xaml
@@ -6,18 +6,30 @@
              xmlns:local="clr-namespace:Techtonica_Mod_Loader.Panels"
              xmlns:TControls="clr-namespace:Techtonica_Mod_Loader.Controls"
              mc:Ignorable="d" 
-             d:DesignHeight="50" d:DesignWidth="800">
-    <Border Background="{DynamicResource lightBackgroundBrush}" CornerRadius="5">
+             MinHeight="50" d:DesignWidth="800">
+    <UserControl.Resources>
+        <Storyboard x:Key="growAnim">
+            <DoubleAnimation From="0" To="300" Duration="0:0:0.2" AccelerationRatio="1" Storyboard.TargetName="markdownViewer" Storyboard.TargetProperty="MaxHeight"/>
+        </Storyboard>
+        <Storyboard x:Key="shrinkAnim">
+            <DoubleAnimation From="300" To="0" Duration="0:0:0.2" AccelerationRatio="1" Storyboard.TargetName="markdownViewer" Storyboard.TargetProperty="MaxHeight"/>
+        </Storyboard>
+    </UserControl.Resources>
+    <Border Background="{DynamicResource lightBackgroundBrush}" CornerRadius="5"
+            MouseLeftButtonUp="OnPanelMouseLeftButtonUp">
         <Grid x:Name="mainGrid" Margin="2">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="{Binding ElementName=thisControl, Path=ActualHeight, UpdateSourceTrigger=PropertyChanged}"/>
-                <ColumnDefinition Width="{Binding ElementName=thisControl, Path=ActualHeight, UpdateSourceTrigger=PropertyChanged}"/>
+                <ColumnDefinition Width="50"/>
+                <ColumnDefinition Width="50"/>
                 <ColumnDefinition/>
                 <ColumnDefinition x:Name="configureColumn" Width="100"/>
                 <ColumnDefinition x:Name="viewModPageColumn" Width="100"/>
                 <ColumnDefinition Width="100"/>
-
             </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition/>
+                <RowDefinition x:Name="detailsRow" Height="Auto"/>
+            </Grid.RowDefinitions>
 
             <TControls:TCheckBox x:Name="enabledBox" Width="30" Height="30"
                                  IsCheckedChanged="EnabledToggled"/>
@@ -34,8 +46,10 @@
                                LeftClicked="OnConfigureClicked"/>
             <TControls:TButton x:Name="viewModPageButton" ButtonText="View Mod Page" Grid.Column="4" Margin="2" Height="30"
                                LeftClicked="ViewModPageClicked"/>
-            <TControls:TButton ButtonText="Delete" Grid.Column="5" Margin="2" Height="30"
+            <TControls:TButton x:Name="deleteButton" ButtonText="Delete" Grid.Column="5" Margin="2" Height="30"
                                RightClicked="DeleteModClicked"/>
+
+            <TControls:MarkdownViewer x:Name="markdownViewer" Grid.Row="1" Grid.ColumnSpan="6" Margin="2,0" Height="Auto" MaxHeight="0"/>
         </Grid>
     </Border>
 </UserControl>
