--- a/Techtonica Mod Loader/Panels/OnlineModPanel.xaml
+++ b/Techtonica Mod Loader/Panels/OnlineModPanel.xaml
@@ -6,15 +6,27 @@
              xmlns:local="clr-namespace:Techtonica_Mod_Loader.Panels"
              xmlns:TControls="clr-namespace:Techtonica_Mod_Loader.Controls"
              mc:Ignorable="d" 
-             d:DesignHeight="50" d:DesignWidth="800">
+             d:DesignHeight="50" d:DesignWidth="800"
+             MouseLeftButtonUp="OnPanelMouseLeftButtonUp">
+    <UserControl.Resources>
+        <Storyboard x:Key="growAnim">
+            <DoubleAnimation From="0" To="300" Duration="0:0:0.2" AccelerationRatio="1" Storyboard.TargetName="markdownViewer" Storyboard.TargetProperty="MaxHeight"/>
+        </Storyboard>
+        <Storyboard x:Key="shrinkAnim">
+            <DoubleAnimation From="300" To="0" Duration="0:0:0.2" AccelerationRatio="1" Storyboard.TargetName="markdownViewer" Storyboard.TargetProperty="MaxHeight"/>
+        </Storyboard>
+    </UserControl.Resources>
     <Border Background="{DynamicResource lightBackgroundBrush}" CornerRadius="5">
         <Grid Margin="2">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="{Binding ElementName=thisControl, Path=ActualHeight, UpdateSourceTrigger=PropertyChanged}"/>
+                <ColumnDefinition Width="50"/>
                 <ColumnDefinition/>
                 <ColumnDefinition Width="100"/>
-
             </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition/>
+                <RowDefinition x:Name="detailsRow" Height="Auto"/>
+            </Grid.RowDefinitions>
 
             <Image x:Name="icon" Width="36" Height="36" Margin="5"/>
             <TextBlock Grid.Column="1" Foreground="White" FontSize="16"
@@ -23,8 +35,10 @@
                 <Run Text=" - "/>
                 <Run x:Name="modTaglineLabel" Text="Tagline"/>
             </TextBlock>
-            <TControls:TButton ButtonText="Download" Grid.Column="3" Margin="2" Height="30"
+            <TControls:TButton x:Name="downloadButton" ButtonText="Download" Grid.Column="3" Margin="2" Height="30"
                                LeftClicked="OnDownloadClicked"/>
+
+            <TControls:MarkdownViewer x:Name="markdownViewer" Grid.Row="1" Grid.ColumnSpan="6" Margin="2,0" Height="Auto" MaxHeight="0"/>
         </Grid>
     </Border>
 </UserControl>
