--- a/Techtonica Mod Loader/Panels/InstalledModPanel.xaml
+++ b/Techtonica Mod Loader/Panels/InstalledModPanel.xaml
@@ -22,6 +22,7 @@
                 <ColumnDefinition Width="50"/>
                 <ColumnDefinition Width="50"/>
                 <ColumnDefinition/>
+                <ColumnDefinition x:Name="updateColumn" Width="100"/>
                 <ColumnDefinition x:Name="donateColumn" Width="100"/>
                 <ColumnDefinition x:Name="configureColumn" Width="100"/>
                 <ColumnDefinition x:Name="viewModPageColumn" Width="100"/>
@@ -43,13 +44,15 @@
                 <Run Text=" - "/>
                 <Run x:Name="modTaglineLabel" Text="Tagline"/>
             </TextBlock>
-            <TControls:TButton x:Name="dontateButton" ButtonText="Donate" Grid.Column="3" Margin="2" Height="30"
+            <TControls:TButton x:Name="updateButton" ButtonText="Update" Grid.Column="3" Margin="2" Height="30"
+                               LeftClicked="OnUpdateClicked"/>
+            <TControls:TButton x:Name="dontateButton" ButtonText="Donate" Grid.Column="4" Margin="2" Height="30"
                                LeftClicked="OnDonateClicked"/>
-            <TControls:TButton x:Name="configureButton" ButtonText="Configure" Grid.Column="4" Margin="2" Height="30"
+            <TControls:TButton x:Name="configureButton" ButtonText="Configure" Grid.Column="5" Margin="2" Height="30"
                                LeftClicked="OnConfigureClicked"/>
-            <TControls:TButton x:Name="viewModPageButton" ButtonText="View Mod Page" Grid.Column="5" Margin="2" Height="30"
+            <TControls:TButton x:Name="viewModPageButton" ButtonText="View Mod Page" Grid.Column="6" Margin="2" Height="30"
                                LeftClicked="ViewModPageClicked"/>
-            <TControls:TButton x:Name="deleteButton" ButtonText="Delete" Grid.Column="6" Margin="2" Height="30"
+            <TControls:TButton x:Name="deleteButton" ButtonText="Delete" Grid.Column="7" Margin="2" Height="30"
                                RightClicked="DeleteModClicked"/>
 
             <TControls:MarkdownViewer x:Name="markdownViewer" Grid.Row="1" Grid.ColumnSpan="6" Margin="2,0" Height="Auto" MaxHeight="0"/>
