--- a/Techtonica Mod Loader/Panels/InstalledModPanel.xaml
+++ b/Techtonica Mod Loader/Panels/InstalledModPanel.xaml
@@ -53,7 +53,7 @@
             <TControls:TButton x:Name="viewModPageButton" ButtonText="View Mod Page" Grid.Column="6" Margin="2" Height="30"
                                LeftClicked="ViewModPageClicked"/>
             <TControls:TButton x:Name="deleteButton" ButtonText="Delete" Grid.Column="7" Margin="2" Height="30"
-                               RightClicked="DeleteModClicked"/>
+                               LeftClicked="DeleteModClicked"/>
 
             <TControls:MarkdownViewer x:Name="markdownViewer" Grid.Row="1" Grid.ColumnSpan="100" Margin="2,0" Height="Auto" MaxHeight="0"/>
         </Grid>
