--- a/Techtonica Mod Loader/Controls/TFancyButton.xaml
+++ b/Techtonica Mod Loader/Controls/TFancyButton.xaml
@@ -26,15 +26,47 @@
 
         <!--#region Background-->
 
-        <Rectangle Fill="{DynamicResource lightestBackgroundBrush}" Height="19" VerticalAlignment="Top" Margin="1"/>
-        <Rectangle Fill="{DynamicResource lightestBackgroundBrush}" Height="19" VerticalAlignment="Bottom" Margin="1,1,20,1"/>
+        <Rectangle Height="19" VerticalAlignment="Top" Margin="1">
+            <Rectangle.Style>
+                <Style TargetType="Rectangle">
+                    <Setter Property="Fill" Value="{DynamicResource lightestBackgroundBrush}"/>
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding ElementName=thisControl, Path=IsEnabled, UpdateSourceTrigger=PropertyChanged}" Value="False">
+                            <Setter Property="Fill" Value="LightGray"/>
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </Rectangle.Style>
+        </Rectangle>
+        <Rectangle Height="20" VerticalAlignment="Bottom" Margin="1,1,20,1">
+            <Rectangle.Style>
+                <Style TargetType="Rectangle">
+                    <Setter Property="Fill" Value="{DynamicResource lightestBackgroundBrush}"/>
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding ElementName=thisControl, Path=IsEnabled, UpdateSourceTrigger=PropertyChanged}" Value="False">
+                            <Setter Property="Fill" Value="LightGray"/>
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </Rectangle.Style>
+        </Rectangle>
 
-        <Rectangle Fill="{DynamicResource lightestBackgroundBrush}" Width="30" Height="20" 
+        <Rectangle Width="30" Height="20" 
                    VerticalAlignment="Bottom" HorizontalAlignment="Right" Margin="0,0,3,8"
                    RenderTransformOrigin="0.5 0.5">
             <Rectangle.RenderTransform>
                 <RotateTransform Angle="-45"/>
             </Rectangle.RenderTransform>
+            <Rectangle.Style>
+                <Style TargetType="Rectangle">
+                    <Setter Property="Fill" Value="{DynamicResource lightestBackgroundBrush}"/>
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding ElementName=thisControl, Path=IsEnabled, UpdateSourceTrigger=PropertyChanged}" Value="False">
+                            <Setter Property="Fill" Value="LightGray"/>
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </Rectangle.Style>
         </Rectangle>
 
 
