--- a/Techtonica Mod Loader/MainWindow.xaml
+++ b/Techtonica Mod Loader/MainWindow.xaml
@@ -35,7 +35,7 @@
                             <RowDefinition/>
                             <RowDefinition/>
                         </Grid.RowDefinitions>
-                        <Controls:TFancyButton ButtonText="Launch Game" Margin="10,0"
+                        <Controls:TFancyButton x:Name="launchGameButton" ButtonText="Launch Game" Margin="10,0"
                                                LeftClicked="OnLaunchGameClicked"/>
                         <Controls:TFancyButton ButtonText="Install From File" Grid.Row="1" Width="165" Height="40" 
                                                LeftClicked="OnInstallFromFileClicked"/>
